<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".playerChoice.PlayerChoice"
    android:fitsSystemWindows="true">

    <!-- Title Group -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bluedark"
            android:fontFamily="@font/viga"
            android:text="Select Players!"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_view_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap a player to add or remove them"
            android:textColor="@color/bluedark"
            android:textSize="15sp"
            android:paddingBottom="10sp"
            android:fontFamily="@font/viga"
            app:layout_constraintTop_toBottomOf="@id/text_view_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Tip Box -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/createPlayerBtn"
            android:layout_width="0dp"
            android:layout_height="77dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/outlineforbutton"
            android:fontFamily="@font/viga"
            android:text="Create Player"
            android:textAllCaps="false"
            android:textColor="@color/bluedark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_done"
            android:layout_width="0dp"
            android:layout_height="77dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:background="@drawable/outlineforbutton"
            android:fontFamily="@font/viga"
            android:text="Play"
            android:textAllCaps="false"
            android:textColor="@color/bluedark"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
